DBZ-8960 change priorities